--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,7 @@ readme = "README.md"
 line-length = 100
 target-version = ["py310", "py311", "py312"]
 include = "\\.pyi?$"
-extend-exclude = [
-  "^\\.venv/",
-  "^data/",
-  "^outputs/",
-]
+extend-exclude = "(^\\.venv/|^data/|^outputs/)"
 
 [tool.isort]
 profile = "black"
