Finalize Phase 2 by adding unit tests for citation strictness/abstain and endpoint normalization, introducing  requirements + .env.example, and updating README with testing, exit codes, and strict-citations usage.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-pydantic>=2.7,<3
-rank-bm25==0.2.2
-sentence-transformers==2.7.0
-pypdf==4.2.0
-pyyaml==6.0.2
-tqdm==4.66.4
-numpy>=1.26
-ruff==0.5.7
-black==24.8.0
-isort==5.13.2
-pytest==8.3.2
-python-dotenv==1.0.1
+numpy
+pyyaml
+tqdm
+requests
+pydantic>=2
+rank-bm25
+sentence-transformers
+pypdf
+pdfplumber
